allow-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-specific
spec:
  podSelector:
    matchLabels:
      deployment: mercury
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: guru
        podSelector:
          matchLabels:
            deployment: scala
      ports:
      - port: 8080
        protocol: TCP
